# eduvative.io-learn-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
src/: main.rs
