[package]
name = "educative_io-learn-rust"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4"
hex = "0.4"
ring = "0.17"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
url = "2.5.2"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
unnecessary_wraps = "deny"
await_holding_refcell_ref = "deny"
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
